Mevcut statik site dosyalarını düzenle ve yeni dosyaları ekle

--- a/degerler.html
+++ b/degerler.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Degerler- Sirac Kolaji</title>
+  <title>Değerler Eğitimi - Sirac Koleji</title>
   <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="navbar-brand d-flex align-items-center">
   <img src="../image/siraj logo.jpg" alt="Logo" class="rounded-circle me-2" style="width: 50px; height: 50px;">
-  <h1 class="mb-0 fs-5 text-white">18 Mart Siraç <span>Koleji</span></h1>
+  <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#siracNavbar">
@@ -46,7 +46,7 @@
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Eğitim Programları</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="manevi.html">Manevi Eğitim</a></li>
-              <li><a class="dropdown-item" href="degerler.html">Değerler Eğitimi</a></li>
+              <li><a class="dropdown-item active" href="degerler.html">Değerler Eğitimi</a></li>
               <li><a class="dropdown-item" href="yabancidil.html">Yabancı Dil</a></li>
               <li><a class="dropdown-item" href="rehberlik.html">Rehberlik</a></li>
             </ul>
@@ -69,9 +69,9 @@
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Etkinlikler</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="oyun.html">Oyun ve Fiziki Etkinlikler</a></li>
-              <li><a class="dropdown-item" href="kulubuler.html">Kulübüler ve P4C</a></li>
+              <li><a class="dropdown-item" href="kulupler.html">Kulüpler ve P4C</a></li>
               <li><a class="dropdown-item" href="sosyalyardim.html">Sosyal Yardım Projeleri</a></li>
-              <li><a class="dropdown-item" href="Helal ve Sağlıklı.html">Helal ve Sağlıklı</a></li>
+              <li><a class="dropdown-item" href="helal-ve-saglikli.html">Helal ve Sağlıklı</a></li>
             </ul>
           </li>
            <li class="nav-item"><a class="nav-link"  href="ogretmen-kadromuz.html">Öğretmen Kadromuz</a></li>
@@ -86,14 +86,34 @@
 <!-- HERO -->
 <section class="hero-section">
   <div class="container">
-    <h1>Ölçme ve Değerlendirme Sistemimiz</h1>
+    <h1>Değerler Eğitimi</h1>
     <p>Montessori destekli yaklaşımımızla özgüvenli, erdemli, üretken ve değerlerine sahip çıkan bireyler yetiştiriyoruz.</p>
   </div>
 </section>
 
-<!-- olcom ve degerler weeyan -->
- <!-- ÖLÇME VE DEĞERLENDİRME SİSTEMİ SECTION -->
-<section class="assessment-system py-5 bg-light">
+<!-- DEĞERLER EĞİTİMİ SECTION -->
+<section class="values-education py-5 bg-light">
+  <div class="container">
+    <div class="section-header text-center mb-5">
+      <h2 class="display-4 fw-bold">Değerler Eğitimi</h2>
+      <p class="lead text-muted">Erdemli bireyler yetiştirmek için değerler eğitimi</p>
+      <div class="divider mx-auto bg-primary"></div>
+    </div>
+    <div class="row g-4 mb-5">
+      <div class="col-lg-12">
+        <div class="values-intro p-4 p-lg-5 bg-white rounded-4 shadow-sm">
+          <h3 class="mb-4">Değerler Eğitimi Nedir?</h3>
+          <p>18 Mart Sirac Koleji olarak, öğrencilerimize akademik bilginin yanı sıra ahlaki değerler ve erdemler kazandırmayı hedefliyoruz. Değerler eğitimi, öğrencilerimizin dürüstlük, adalet, saygı, sorumluluk gibi evrensel değerleri içselleştirmelerini sağlar. Bu eğitim, onların sadece başarılı bireyler değil, aynı zamanda topluma faydalı, erdemli insanlar olmalarını destekler.</p>
+          <p>Değerler eğitimi, derslerimizde ve günlük etkinliklerimizde entegre bir şekilde yer alır. Öğrencilerimiz, bu değerleri hikayeler, grup çalışmaları ve örnek olay incelemeleri yoluyla öğrenirler.</p>
+        </div>
+      </div>
+    </div>
+    <div class="section-header text-center mb-5">
+      <h2 class="display-4 fw-bold">Ölçme ve Değerlendirme Sistemimiz</h2>
+      <p class="lead text-muted">Bireysel gelişimi merkeze alan modern değerlendirme yöntemleri</p>
+      <div class="divider mx-auto bg-primary"></div>
+    </div>
+<section class="assessment-system py-5 bg-light" style="display: none;"></section>
   <div class="container">
     <div class="section-header text-center mb-5">
       <h2 class="display-4 fw-bold">Ölçme ve Değerlendirme Sistemimiz</h2>
@@ -113,10 +133,9 @@
             <img src="../image/etüt/5.jpg" 
                  alt="Etüt çalışmaları" class="img-fluid w-100">
           </div>
-          <p>Çalisan toplumlarda ögrencinin ailesi ile geçirdigi zaman kisitlidir. Aile evde olduju zaman diliminde çocuguyla kaliteli zaman geçirmek istemektedir.
-Bizler de 18 Mart Sirac Koleji olarak bu ihtiyacin farkinda olarak, egitim sistemimizi plantiyoruz. Okulumuz etütlü bir okuldur. Etüt saatlerinde ögrenci-ler dilerlerse ödevlerini yaparlar ya da gün içinde yarim kalan çalismalarini tamamlarlar. Ayrica etüt derslerinde ogrencilerimizle isledigimiz konularin pekismesi, ögrenme eksikliklerinin fark edilmesi adina çalismalar yapiyoruz.
-Bireysel ögrenmeye daha çok ihtiyaci olan ögrencilerimizi tespit edip, onlar için birebir dersler planliyoruz. Yine ayni sekilde ögrendigi bilgileri somut)
-materyaller kullanarak, kalici hale getiriyoruz.:</p>
+          <p>Çalışan toplumlarda öğrencinin ailesi ile geçirdiği zaman kısıtlıdır. Aile evde olduğu zaman diliminde çocuğuyla kaliteli zaman geçirmek istemektedir.
+Bizler de 18 Mart Sirac Koleji olarak bu ihtiyacın farkında olarak, eğitim sistemimizi planlıyoruz. Okulumuz etütlü bir okuldur. Etüt saatlerinde öğrenciler dilerlerse ödevlerini yaparlar ya da gün içinde yarım kalan çalışmalarını tamamlarlar. Ayrıca etüt derslerinde öğrencilerimizle işlediğimiz konuların pekişmesi, öğrenme eksikliklerinin fark edilmesi adına çalışmalar yapıyoruz.
+Bireysel öğrenmeye daha çok ihtiyacı olan öğrencilerimizi tespit edip, onlar için birebir dersler planlıyoruz. Yine aynı şekilde öğrendiği bilgileri somut materyaller kullanarak, kalıcı hale getiriyoruz.</p>
           <ul class="assessment-features">
             <li><i class="fas fa-check-circle text-primary"></i> Ödevlerini tamamlarlar</li>
             <li><i class="fas fa-check-circle text-primary"></i> Konu tekrarı yaparlar</li>
@@ -139,8 +158,8 @@ materyaller kullanarak, kalici hale getiriyoruz.:</p>
             <img src="../image/portfolyo/profolya.jpg" 
                  alt="Portfolyo çalışmaları" class="img-fluid w-100">
           </div>
-          <p>kullanarak gerçeklestirir. Okulumuzda ögretmenterimiz, sene basinda ögrenciterin hazirbulunustuk derecelerini tespit etmek için envanterler olusturur. Ayni zamanda müfredatin tamamini kapsayan kazanim deger-lendirme ölçekleri ile dönem içinde gelisimlerini de takip ederler. Her ögrencinin kendine özel olusturulan portfolyo dosyasinda yaptigi çalis-malar kendi özgür seçimiyle birik-tiritir ve bireysel yapilan veli top-lantilarinda velilere sunulur. Dosyaiçerigine ogrencinin Montessori atölyesinde yaptiõi çalismalara da yer veritir. 
-            Ögretmen, ögrencinin hem sosyal- duygusal gelisimini hem de akademik gelisimini gözlemler ve kayda geçer. Ölçeklerle bir degerlen-dirme yapar.</p>
+          <p>Okulumuzda öğretmenlerimiz, sene başında öğrencilerin hazır bulunmuşluk derecelerini tespit etmek için envanterler oluşturur. Aynı zamanda müfredatın tamamını kapsayan kazanım değerlendirme ölçekleri ile dönem içinde gelişimlerini de takip ederler. Her öğrencinin kendine özel oluşturulan portfolyo dosyasında yaptığı çalışmalar kendi özgür seçimiyle biriktirilir ve bireysel yapılan veli toplantılarında velilere sunulur. Dosya içeriğine öğrencinin Montessori atölyesinde yaptığı çalışmalara da yer verilir. 
+            Öğretmen, öğrencinin hem sosyal-duygusal gelişimini hem de akademik gelişimini gözlemler ve kayda geçer. Ölçeklerle bir değerlendirme yapar.</p>
           <ul class="assessment-features">
             <li><i class="fas fa-check-circle text-success"></i> Kişisel portfolyo dosyaları</li>
             <li><i class="fas fa-check-circle text-success"></i> Kazanım değerlendirme ölçekleri</li>
@@ -163,7 +182,7 @@ materyaller kullanarak, kalici hale getiriyoruz.:</p>
             <img src="../image/ödevlendirme/5.jpg" 
                  alt="Ödevlendirme" class="img-fluid w-100">
           </div>
-          <p>Egitim yönüyle gelismis olan toptumlarda ödevin agirtigr ve niteligi diger toplumlara göre farklitiklar gösterir. Yapilan arastirmalar ödevin, çocugun yasaminda özellikle zaman yönetimi] ve sorumtuluk duygusunu kazanmada etkin bir yere sahiptir. Klasik egitim antayisindan farkli olarak önerilen ödev ögrenciyi aktif kilan, düsünmeye- arastirmaya sevk eden, aile bireyleriyle isbirligi yapmayi gerektiren nitelikte ödevlerin verilmesidir. </p>
+          <p>Eğitim yönüyle gelişmiş olan toplumlarda ödevin ağırlığı ve niteliği diğer toplumlara göre farklılıklar gösterir. Yapılan araştırmalar ödevin, çocuğun yaşamında özellikle zaman yönetimi ve sorumluluk duygusunu kazanmada etkin bir yere sahip olduğunu ortaya koymaktadır. Klasik eğitim anlayışından farklı olarak önerilen ödev, öğrenciyi aktif kılan, düşünmeye ve araştırmaya sevk eden, aile bireyleriyle işbirliği yapmayı gerektiren nitelikte ödevlerin verilmesidir.</p>
           <ul class="assessment-features">
             <li><i class="fas fa-check-circle text-warning"></i> Haftalık bireysel ödev planlaması</li>
             <li><i class="fas fa-check-circle text-warning"></i> Araştırmaya teşvik eden projeler</li>
@@ -249,10 +268,18 @@ materyaller kullanarak, kalici hale getiriyoruz.:</p>
   color: #fff;
 }
 
+  /* Values Education Styles */
+  .values-education {
+    position: relative;
+    overflow: hidden;
+    background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
+  }
+  
   /* Assessment System Styles */
   .assessment-system {
     position: relative;
     overflow: hidden;
+    display: none;
   }
   
   .assessment-system::before {
@@ -420,9 +447,9 @@ materyaller kullanarak, kalici hale getiriyoruz.:</p>
       <div class="col-lg-4 mb-4 mb-lg-0">
         <div class="footer-logo">
           <i class="fas fa-child"></i>
-          <h5>18 MartSiraç <span>Koleji</span></h5>
+          <h5>18 Mart Sirac <span>Koleji</span></h5>
         </div>
-        <p>2007 yılında kurulan Siraç Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
+        <p>2007 yılında kurulan Sirac Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
         <div class="footer-social">
           <a href="https://www.facebook.com/18MartSiracKoleji/" class="social-icon"><i class="fab fa-facebook-f"></i></a>
           <a href="https://www.instagram.com/18martsirackoleji/" class="social-icon"><i class="fab fa-instagram"></i></a>
@@ -434,9 +461,9 @@ materyaller kullanarak, kalici hale getiriyoruz.:</p>
       <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
         <h5 class="footer-title">İletişim</h5>
         <div class="footer-contact">
-          <p><i class="fas fa-map-marker-alt"></i> Kalabaklı/Kapaz, Çanakkale</p>
+          <p><i class="fas fa-map-marker-alt"></i> Kalabaklı/Kepez, Çanakkale</p>
           <p><i class="fas fa-phone"></i> +90 543 717 8217</p>
-          <p><i class="fas fa-envelope"></i> bilgi@18martsirac.com</p>
+          <p><i class="fas fa-envelope"></i> bilgi@18martsirackoleji.k12.tr</p>
           <p><i class="fas fa-clock"></i> Pzt-Cuma: 08:00 - 17:00</p>
         </div>
       </div>
@@ -465,7 +492,7 @@ materyaller kullanarak, kalici hale getiriyoruz.:</p>
     </div>
     
     <div class="copyright">
-      <small>&copy; 2007-2023 Siraç Koleji. Tüm Hakları Saklıdır.</small>
+      <small>&copy; 2007-2025 Sirac Koleji. Tüm Hakları Saklıdır.</small>
     </div>
   </div>
 </footer>
