--- a/iletisim.html
+++ b/iletisim.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>İletişim - Siraç Koleji</title>
+  <title>İletişim - Sirac Koleji</title>
   <link rel="icon" type="image/png" href="../image/siraj logo.jpg">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -464,7 +464,7 @@
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="index.html">
         <img src="../image/siraj logo.jpg" alt="Logo" class="rounded-circle me-2" style="width: 50px; height: 50px;">
-        <h1 class="mb-0 fs-5 text-white">18 Mart Siraç <span>Koleji</span></h1>
+        <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
       </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#siracNavbar">
@@ -509,9 +509,9 @@
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Etkinlikler</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="oyun.html">Oyun ve Fiziki Etkinlikler</a></li>
-              <li><a class="dropdown-item" href="kulubuler.html">Kulübüler ve P4C</a></li>
+              <li><a class="dropdown-item" href="kulupler.html">Kulüpler ve P4C</a></li>
               <li><a class="dropdown-item" href="sosyalyardim.html">Sosyal Yardım Projeleri</a></li>
-              <li><a class="dropdown-item" href="Helal ve Sağlıklı.html">Helal ve Sağlıklı</a></li>
+              <li><a class="dropdown-item" href="helal-ve-saglikli.html">Helal ve Sağlıklı</a></li>
             </ul>
           </li>
 
@@ -608,7 +608,7 @@
         
         <div class="form-group">
           <label for="subject"><i class="fas fa-tag"></i> Konu</label>
-          <select id="subject" required>
+          <select id="subject" required style="width: 100%; padding: 14px 20px; border: 1px solid #ddd; border-radius: 8px; font-size: 1rem; background-color: white; transition: all 0.3s ease; cursor: pointer;">
             <option value="" disabled selected>Konu seçiniz</option>
             <option value="genel">Genel Soru</option>
             <option value="kayit">Kayıt Bilgileri</option>
@@ -649,10 +649,10 @@
       <div class="col-lg-4 mb-5 mb-lg-0">
         <div class="footer-logo">
           <i class="fas fa-child"></i>
-          <h5>18 Mart Siraç <span>Koleji</span></h5>
+          <h5>18 Mart Sirac <span>Koleji</span></h5>
         </div>
         <div class="footer-about">
-          <p>2007 yılında kurulan Siraç Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
+          <p>2007 yılında kurulan Sirac Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
         </div>
         <div class="footer-social">
           <a href="https://www.facebook.com/18MartSiracKoleji/"><i class="fab fa-facebook-f"></i></a>
@@ -665,9 +665,9 @@
       <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
         <h5 class="footer-title">İletişim</h5>
         <div class="footer-contact">
-          <p><i class="fas fa-map-marker-alt"></i> Kalabaklı koyu. No:25 Kepez, Çanakkale</p>
+          <p><i class="fas fa-map-marker-alt"></i> Kalabaklı köyü No:25 Kepez, Çanakkale</p>
           <p><i class="fas fa-phone"></i> +90 543 717 8217</p>
-          <p><i class="fas fa-envelope"></i> bilgi@18martsirac.com</p>
+          <p><i class="fas fa-envelope"></i> bilgi@18martsirackoleji.k12.tr</p>
           <p><i class="fas fa-clock"></i> Pzt-Cuma: 08:00 - 17:00</p>
         </div>
       </div>
@@ -696,7 +696,7 @@
     </div>
     
     <div class="copyright">
-      <small>&copy; 2007-2023 Siraç Koleji. Tüm Hakları Saklıdır.</small>
+      <small>&copy; 2007-2025 Sirac Koleji. Tüm Hakları Saklıdır.</small>
     </div>
   </div>
 </footer>
