--- a/ogretmen-kadromuz.html
+++ b/ogretmen-kadromuz.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Öğretmen - Sirac Kolaji</title>
+  <title>Öğretmen Kadromuz - Sirac Koleji</title>
   <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/ogretman.css">
@@ -19,7 +18,7 @@
     <div class="container">
      <div class="navbar-brand d-flex align-items-center">
   <img src="../image/siraj logo.jpg" alt="Logo" class="rounded-circle me-2" style="width: 50px; height: 50px;">
-  <h1 class="mb-0 fs-5 text-white">18 Mart Siraç <span>Koleji</span></h1>
+  <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#siracNavbar">
@@ -40,7 +39,7 @@
               <li><a class="dropdown-item" href="misyon.html">Misyon & Vizyon</a></li>
               <li><a class="dropdown-item" href="tarihce.html">Tarihçe</a></li>
               <li><a class="dropdown-item" href="kultur.html">Okul Kültürü</a></li>
-              <li><a class="dropdown-item" href="ogretmen-kadromuz.html">Öğretmen Kadromuz</a></li>
+              <li><a class="dropdown-item active" href="ogretmen-kadromuz.html">Öğretmen Kadromuz</a></li>
             </ul>
           </li>
 
@@ -72,12 +71,12 @@
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Etkinlikler</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="oyun.html">Oyun ve Fiziki Etkinlikler</a></li>
-              <li><a class="dropdown-item" href="kulubuler.html">Kulübüler ve P4C</a></li>
+              <li><a class="dropdown-item" href="kulupler.html">Kulüpler ve P4C</a></li>
               <li><a class="dropdown-item" href="sosyalyardim.html">Sosyal Yardım Projeleri</a></li>
-              <li><a class="dropdown-item" href="Helal ve Sağlıklı.html">Helal ve Sağlıklı</a></li>
+              <li><a class="dropdown-item" href="helal-ve-saglikli.html">Helal ve Sağlıklı</a></li>
             </ul>
           </li>
-          <li class="nav-item"><a class="nav-link"  href="ogretmen-kadromuz.html">Öğretmen Kadromuz</a></li>
+          <li class="nav-item"><a class="nav-link active" href="ogretmen-kadromuz.html">Öğretmen Kadromuz</a></li>
           <li class="nav-item"><a class="nav-link " href="galeri.html">Galeri</a></li>
           <li class="nav-item"><a class="nav-link" href="iletisim.html">İletişim</a></li>
         </ul>
@@ -108,21 +107,21 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Şengül Karaca Göktaş</h5>
             <p class="text-muted">Okul Müdürü</p>
-            <a href="sengul.goktas@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:sengul.goktas@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
         </div>
       </div>
 
-      <!-- Elif Saytaş -->
+      <!-- Elif Soytaş -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
-          <img src="../image/ogretman/images.png" class="teacher-img" alt="Elif Saytaş">
+          <img src="../image/ogretman/images.png" class="teacher-img" alt="Elif Soytaş">
           <div class="card-body text-center">
-            <h5 class="card-title text-primary">Elif Saytaş</h5>
+            <h5 class="card-title text-primary">Elif Soytaş</h5>
             <p class="text-muted">Müdür Yardımcısı</p>
-            <a href="elif.soytas@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:elif.soytas@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -136,7 +135,7 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Seda Nur Tekeli</h5>
             <p class="text-muted">İngilizce Öğretmeni</p>
-            <a href="sedanur.tekeli@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:sedanur.tekeli@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -150,7 +149,7 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Dilek Orhan</h5>
             <p class="text-muted">Görsel Sanatlar Öğretmeni</p>
-            <a href="dilek.orhan@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:dilek.orhan@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -164,7 +163,7 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Beyzanur Ateş</h5>
             <p class="text-muted">Matematik Öğretmeni</p>
-            <a href="beyzanur.ates@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:beyzanur.ates@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -178,7 +177,7 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Melike Nur Sezer</h5>
             <p class="text-muted">Anaokulu Öğretmeni</p>
-            <a href="melikenur.sezer@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:melikenur.sezer@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -206,35 +205,35 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Furkan Köksal</h5>
             <p class="text-muted">Sınıf Öğretmeni</p>
-            <a href="furkan.koksal@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:furkan.koksal@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
         </div>
       </div>
 
-      <!-- Başak Koçak -->
+      <!-- Başak Kökçak -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
           <img src="../image/ogretman/basak.kokcak.jpg" class="teacher-img" alt="Başak Kökçak">
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Başak Kökçak</h5>
             <p class="text-muted">Sınıf Öğretmeni</p>
-            <a href="basak.kokcak@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:basak.kokcak@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
         </div>
       </div>
 
-      <!-- Hatice Şüheda Bayram -->
+      <!-- Hatice Şuheda Bayram -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
           <img src="../image/ogretman/images.png" class="teacher-img" alt="Hatice Şuheda Bayram">
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Hatice Şuheda Bayram</h5>
             <p class="text-muted">Psikolojik Danışman</p>
-            <a href="hatice.bayram@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:hatice.bayram@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -248,7 +247,7 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Figen Aksoy</h5>
             <p class="text-muted">Okul Öncesi Öğretmeni</p>
-            <a href="figen.aksoy@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:figen.aksoy@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -262,7 +261,7 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Zeynep Topçu</h5>
             <p class="text-muted">Sınıf Öğretmeni</p>
-            <a href="zeynep.topcu@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:zeynep.topcu@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -276,7 +275,7 @@
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Şeyma Işık</h5>
             <p class="text-muted">Okul Öncesi Öğretmeni</p>
-            <a href="seyma.isik@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
+            <a href="mailto:seyma.isik@sirackoleji.com" class="btn btn-sm btn-outline-primary mt-2">
               <i class="fas fa-envelope"></i> E-posta Gönder
             </a>
           </div>
@@ -293,9 +292,9 @@
       <div class="col-lg-4 mb-4 mb-lg-0">
         <div class="footer-logo">
           <i class="fas fa-child"></i>
-          <h5> 18 Mart Siraç <span>Koleji</span></h5>
+          <h5>18 Mart Sirac <span>Koleji</span></h5>
         </div>
-        <p>2007 yılında kurulan Siraç Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
+        <p>2007 yılında kurulan Sirac Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
         <div class="footer-social">
           <a href="https://www.facebook.com/18MartSiracKoleji/" class="social-icon"><i class="fab fa-facebook-f"></i></a>
           <a href="https://www.instagram.com/18martsirackoleji/" class="social-icon"><i class="fab fa-instagram"></i></a>
@@ -307,9 +306,9 @@
       <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
         <h5 class="footer-title">İletişim</h5>
         <div class="footer-contact">
-          <p><i class="fas fa-map-marker-alt"></i> Kalabaklı/Kapaz, Çanakkale</p>
+          <p><i class="fas fa-map-marker-alt"></i> Kalabaklı/Kepez, Çanakkale</p>
           <p><i class="fas fa-phone"></i> +90 543 717 8217</p>
-          <p><i class="fas fa-envelope"></i> bilgi@18martsirac.com</p>
+          <p><i class="fas fa-envelope"></i> bilgi@18martsirackoleji.k12.tr</p>
           <p><i class="fas fa-clock"></i> Pzt-Cuma: 08:00 - 17:00</p>
         </div>
       </div>
@@ -338,7 +337,7 @@
     </div>
     
     <div class="copyright">
-      <small>&copy; 2007-2023 Siraç Koleji. Tüm Hakları Saklıdır.</small>
+      <small>&copy; 2007-2025 Sirac Koleji. Tüm Hakları Saklıdır.</small>
     </div>
   </div>
 </footer>
