--- a/oyun.html
+++ b/oyun.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Oyun ve Fiziki Etkinlikler - Siraç Koleji</title>
+  <title>Oyun ve Fiziki Etkinlikler - Sirac Koleji</title>
   <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -363,7 +363,7 @@
     <div class="container">
      <div class="navbar-brand d-flex align-items-center">
   <img src="../image/siraj logo.jpg" alt="Logo" class="rounded-circle me-2" style="width: 50px; height: 50px;">
-  <h1 class="mb-0 fs-5 text-white">18 Mart Siraç <span>Koleji</span></h1>
+  <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#siracNavbar">
@@ -405,13 +405,13 @@
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Etkinlikler</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item active" href="oyun.html">Oyun ve Fiziki Etkinlikler</a></li>
-              <li><a class="dropdown-item" href="kulubuler.html">Kulübüler ve P4C</a></li>
+              <li><a class="dropdown-item" href="kulupler.html">Kulüpler ve P4C</a></li>
               <li><a class="dropdown-item" href="sosyalyardim.html">Sosyal Yardım Projeleri</a></li>
-              <li><a class="dropdown-item" href="Helal ve Sağlıklı.html">Helal ve Sağlıklı</a></li>
+              <li><a class="dropdown-item" href="helal-ve-saglikli.html">Helal ve Sağlıklı</a></li>
             </ul>
           </li>
          <li class="nav-item"><a class="nav-link " href="galeri.html">Galeri</a></li>
-          <li class="nav-item"><a class="nav-link " href="ogretmen-kadromuz.html">ogretmen-kadromuz</a></li>
+          <li class="nav-item"><a class="nav-link " href="ogretmen-kadromuz.html">Öğretmen Kadromuz</a></li>
           <li class="nav-item"><a class="nav-link" href="iletisim.html">İletişim</a></li>
         </ul>
       </div>
@@ -423,7 +423,7 @@
 <section class="activity-hero">
   <div class="container text-center">
     <h1>Oyun ve Fiziki Etkinlikler</h1>
-    <p>Siraç Koleji'nde öğrencilerimizin fiziksel gelişimini destekleyen çeşitli aktiviteler ve spor programları</p>
+    <p>Sirac Koleji'nde öğrencilerimizin fiziksel gelişimini destekleyen çeşitli aktiviteler ve spor programları</p>
   </div>
 </section>
 
@@ -439,7 +439,7 @@
       <div class="col-lg-6">
         <div class="content-card">
           <h3>Eğitim Anlayışımız</h3>
-          <p><strong>Bizler Siraç Koleji</strong> olarak toplumumuzun her alanında spor, bilgi ve becerisi yüksek, zinde ve manevi değerlere sahip çıkan, yaşam şekillendiren, ortak unsurlara saygılı bireyler yetiştirmek üzere eğitim ve öğretim içeriğimizi düzenliyoruz.</p>
+          <p><strong>Bizler Sirac Koleji</strong> olarak toplumumuzun her alanında spor, bilgi ve becerisi yüksek, zinde ve manevi değerlere sahip çıkan, yaşam şekillendiren, ortak unsurlara saygılı bireyler yetiştirmek üzere eğitim ve öğretim içeriğimizi düzenliyoruz.</p>
         </div>
       </div>
       
@@ -543,7 +543,7 @@
   <div class="container">
     <div class="cta-content">
       <h2>Tekvando Eğitimlerimize Katılın</h2>
-      <p>Çocuğunuzun fiziksel ve zihinsel gelişimine katkı sağlamak için Siraç Koleji Tekvando Kulübü'ne kayıt yaptırabilirsiniz.</p>
+      <p>Çocuğunuzun fiziksel ve zihinsel gelişimine katkı sağlamak için Sirac Koleji Tekvando Kulübü'ne kayıt yaptırabilirsiniz.</p>
       <a href="iletisim.html" class="cta-button">İletişime Geçin</a>
     </div>
   </div>
@@ -556,9 +556,9 @@
       <div class="col-lg-4 mb-4 mb-lg-0">
         <div class="footer-logo">
           <i class="fas fa-child"></i>
-          <h5>18 Mart Siraç <span>Koleji</span></h5>
+          <h5>18 Mart Sirac <span>Koleji</span></h5>
         </div>
-        <p>2007 yılında kurulan Siraç Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
+        <p>2007 yılında kurulan Sirac Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
         <div class="footer-social">
           <a href="https://www.facebook.com/18MartSiracKoleji/" class="social-icon"><i class="fab fa-facebook-f"></i></a>
           <a href="https://www.instagram.com/18martsirackoleji/" class="social-icon"><i class="fab fa-instagram"></i></a>
@@ -570,9 +570,9 @@
       <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
         <h5 class="footer-title">İletişim</h5>
         <div class="footer-contact">
-          <p><i class="fas fa-map-marker-alt"></i> Kalabaklı/Kapaz, Çanakkale</p>
+          <p><i class="fas fa-map-marker-alt"></i> Kalabaklı/Kepez, Çanakkale</p>
           <p><i class="fas fa-phone"></i> +90 543 717 8217</p>
-          <p><i class="fas fa-envelope"></i> bilgi@18martsirac.com</p>
+          <p><i class="fas fa-envelope"></i> bilgi@18martsirackoleji.k12.tr</p>
           <p><i class="fas fa-clock"></i> Pzt-Cuma: 08:00 - 17:00</p>
         </div>
       </div>
@@ -601,7 +601,7 @@
     </div>
     
     <div class="copyright">
-      <small>&copy; 2007-2023 Siraç Koleji. Tüm Hakları Saklıdır.</small>
+      <small>&copy; 2007-2025 Sirac Koleji. Tüm Hakları Saklıdır.</small>
     </div>
   </div>
 </footer>
