--- a/kulupler.html
+++ b/kulupler.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gorsel - Sirac Kolaji</title>
+  <title>Kulüpler ve P4C - Sirac Koleji</title>
   <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -17,7 +17,7 @@
     <div class="container">
      <div class="navbar-brand d-flex align-items-center">
   <img src="../image/siraj logo.jpg" alt="Logo" class="rounded-circle me-2" style="width: 50px; height: 50px;">
-  <h1 class="mb-0 fs-5 text-white">18 Mart Siraç <span>Koleji</span></h1>
+  <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#siracNavbar">
@@ -69,9 +69,9 @@
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Etkinlikler</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="oyun.html">Oyun ve Fiziki Etkinlikler</a></li>
-              <li><a class="dropdown-item" href="kulubuler.html">kulübüler ve P4C</a></li>
+              <li><a class="dropdown-item active" href="kulupler.html">Kulüpler ve P4C</a></li>
               <li><a class="dropdown-item" href="sosyalyardim.html">Sosyal Yardım Projeleri</a></li>
-              <li><a class="dropdown-item" href="Helal ve Sağlıklı.html">Helal ve Sağlıklı</a></li>
+              <li><a class="dropdown-item" href="helal-ve-saglikli.html">Helal ve Sağlıklı</a></li>
             </ul>
           </li>
            <li class="nav-item"><a class="nav-link"  href="ogretmen-kadromuz.html">Öğretmen Kadromuz</a></li>
@@ -659,11 +659,11 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-4 mb-4 mb-lg-0">
-        <div class="footer-logo d-flex align-items-center mb-3">
-          <i class="fas fa-child fa-2x text-warning me-3"></i>
-          <h5 class="mb-0">18 Mart Sıraç <span class="text-warning">Koleji</span></h5>
+        <div class="footer-logo">
+          <i class="fas fa-child"></i>
+          <h5>18 Mart Sirac <span>Koleji</span></h5>
         </div>
-        <p class="mb-4">2007 yılında kurulan Sıraç Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
+        <p class="mb-4">2007 yılında kurulan Sirac Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
         <div class="footer-social">
           <a href="https://www.facebook.com/18MartSiracKoleji/" class="social-icon me-2"><i class="fab fa-facebook-f fa-lg"></i></a>
           <a href="https://www.instagram.com/18martsirackoleji/" class="social-icon me-2"><i class="fab fa-instagram fa-lg"></i></a>
@@ -677,7 +677,7 @@
         <div class="footer-contact">
           <p class="mb-3"><i class="fas fa-map-marker-alt me-2 text-warning"></i> Kalabaklı/Kepez, Çanakkale</p>
           <p class="mb-3"><i class="fas fa-phone me-2 text-warning"></i> +90 543 717 8217</p>
-          <p class="mb-3"><i class="fas fa-envelope me-2 text-warning"></i> bilgi@18martsirac.com</p>
+          <p class="mb-3"><i class="fas fa-envelope me-2 text-warning"></i> bilgi@18martsirackoleji.k12.tr</p>
           <p class="mb-0"><i class="fas fa-clock me-2 text-warning"></i> Pzt-Cuma: 08:00 - 17:00</p>
         </div>
       </div>
@@ -706,7 +706,7 @@
     </div>
     
     <div class="copyright pt-4 mt-4 border-top text-center">
-      <small>&copy; 2007-2023 Sıraç Koleji. Tüm Hakları Saklıdır.</small>
+      <small>&copy; 2007-2025 Sirac Koleji. Tüm Hakları Saklıdır.</small>
     </div>
   </div>
 </footer>
