--- a/tasavvuf.html
+++ b/tasavvuf.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tasavvuf - Sirac Kolaji</title>
+  <title>Tasavvuf - Sirac Koleji</title>
   <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -17,7 +17,7 @@
     <div class="container">
    <div class="navbar-brand d-flex align-items-center">
   <img src="../image/siraj logo.jpg" alt="Logo" class="rounded-circle me-2" style="width: 50px; height: 50px;">
-  <h1 class="mb-0 fs-5 text-white">18 Mart Siraç <span>Koleji</span></h1>
+  <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
 </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#siracNavbar">
         <span class="navbar-toggler-icon"></span>
@@ -58,7 +58,7 @@
               <li><a class="dropdown-item" href="robotik.html">Robotik Kodlama</a></li>
               <li><a class="dropdown-item" href="gorsel.html">Görsel Sanatlar ve Ahşap</a></li>
               <li><a class="dropdown-item" href="mutfak.html">Mutfak Atölyesi</a></li>
-              <li><a class="dropdown-item" href="tasavvuf.html">Tasavvuf Müziği</a></li>
+              <li><a class="dropdown-item active" href="tasavvuf.html">Tasavvuf Müziği</a></li>
               <li><a class="dropdown-item" href="kozmik.html">Montessori Kozmik</a></li>
             </ul>
           </li>
@@ -68,9 +68,9 @@
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Etkinlikler</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="oyun.html">Oyun ve Fiziki Etkinlikler</a></li>
-              <li><a class="dropdown-item" href="kulubuler.html">Kulübüler ve P4C</a></li>
+              <li><a class="dropdown-item" href="kulupler.html">Kulüpler ve P4C</a></li>
               <li><a class="dropdown-item" href="sosyalyardim.html">Sosyal Yardım Projeleri</a></li>
-              <li><a class="dropdown-item" href="Helal ve Sağlıklı.html">Helal ve Sağlıklı</a></li>
+              <li><a class="dropdown-item" href="helal-ve-saglikli.html">Helal ve Sağlıklı</a></li>
             </ul>
           </li>
           <li class="nav-item"><a class="nav-link"  href="ogretmen-kadromuz.html">Öğretmen Kadromuz</a></li>
@@ -112,7 +112,7 @@
       <div class="col-lg-6 order-lg-1">
         <div class="tasawwuf-main-content p-4 p-lg-5 rounded-4 h-100">
           <h3 class="mb-4">Müziğin Mistik Yolculuğu</h3>
-          <p>18 Mart Sırac Koleji'nde müzik dersleri, öğrencilere müziği sevdirme ve müzik aletleriyle tanıştırma amacı taşır. Tasavvuf müziği atölyemizde:</p>
+          <p>18 Mart Sirac Koleji'nde müzik dersleri, öğrencilere müziği sevdirme ve müzik aletleriyle tanıştırma amacı taşır. Tasavvuf müziği atölyemizde:</p>
           
           <ul class="tasawwuf-features mb-4">
             <li><i class="fas fa-music"></i> <strong>Ritim Eğitimi:</strong> Semai, soğan devri hindi gibi Türk musikisi usulleri öğretilir</li>
@@ -401,9 +401,9 @@
       <div class="col-lg-4 mb-4 mb-lg-0">
         <div class="footer-logo">
           <i class="fas fa-child"></i>
-          <h5>18 Mart Siraç <span>Koleji</span></h5>
+          <h5>18 Mart Sirac <span>Koleji</span></h5>
         </div>
-        <p>2007 yılında kurulan Siraç Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
+        <p>2007 yılında kurulan Sirac Koleji, güçlü değerlerle donanmış nesiller yetiştirir. Öğrencilerimizin akademik, sosyal ve manevi gelişimini ön planda tutuyoruz.</p>
         <div class="footer-social">
           <a href="https://www.facebook.com/18MartSiracKoleji/" class="social-icon"><i class="fab fa-facebook-f"></i></a>
           <a href="https://www.instagram.com/18martsirackoleji/" class="social-icon"><i class="fab fa-instagram"></i></a>
@@ -415,9 +415,9 @@
       <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
         <h5 class="footer-title">İletişim</h5>
         <div class="footer-contact">
-          <p><i class="fas fa-map-marker-alt"></i> Kalabaklı/Kapaz, Çanakkale</p>
+          <p><i class="fas fa-map-marker-alt"></i> Kalabaklı/Kepez, Çanakkale</p>
           <p><i class="fas fa-phone"></i> +90 543 717 8217</p>
-          <p><i class="fas fa-envelope"></i> bilgi@18martsirac.com</p>
+          <p><i class="fas fa-envelope"></i> bilgi@18martsirackoleji.k12.tr</p>
           <p><i class="fas fa-clock"></i> Pzt-Cuma: 08:00 - 17:00</p>
         </div>
       </div>
@@ -446,7 +446,7 @@
     </div>
     
     <div class="copyright">
-      <small>&copy; 2007-2023 Siraç Koleji. Tüm Hakları Saklıdır.</small>
+      <small>&copy; 2007-2025 Sirac Koleji. Tüm Hakları Saklıdır.</small>
     </div>
   </div>
 </footer>
